public class Episode extends Series {


}
