public class Search {


    public Search() {
    }

    public void seachByTitle(String title){


    }

    public void seachByCategory(String category){


    }
}
