public class Series extends AMedia{
    private int episode;
    private int season;

    @Override
    public void playMedia() {

    }

    @Override
    public void backToMenu(String q) {

    }



}
